# MoE-Infinity

./: .gitignore  main.py  pyproject.toml  requirements.txt
moe_infinity/models/: mixtral.py
