[project]
name = "moe-infinity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "auto-gptq>=0.7.1",
    "chardet>=5.2.0",
    "datasets>=2.12.0",
    "fastapi>=0.115.12",
    "hjson>=3.1.0",
    "ninja>=1.11.1.4",
    "numpy==1.22.4",
    "openai>=1.84.0",
    "optimum>=1.17.1",
    "packaging>=20.0",
    "pre-commit>=4.2.0",
    "py-cpuinfo>=9.0.0",
    "pyarrow==12.0.0",
    "pydantic==1.10.12",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "sphinx>=7.4.7",
    "torch>=2.1.1",
    "transformers>=4.37.1,<4.47",
    "uvicorn>=0.34.3",
]
